# lystron-bot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  bot.py  pyproject.toml
nb_shared/: __init__.py  alconna_ns.py  auth.py  json_config.py  validate.py
plugin/: __init__.py
plugin/agent/: __init__.py  commands.py  config.py  exceptions.py  message_extract.py  n8n.py  session.py
plugin/agent/adapter/: __init__.py  base.py  onebot_v11.py  router.py
plugin/agent/ai/: gemini.py  router.py
plugin/anti_recall/: __init__.py  cache.py  commands.py  config.py  constants.py  forward.py  handlers.py  segments.py  state.py  utils.py
plugin/dev_debug/: __init__.py  record.py
plugin/dev_debug/commands/: __init__.py  test_alconna.py  test_send.py
plugin/recall/: __init__.py  commands.py  executers.py
